--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -12,6 +12,11 @@
     border: 1px solid black;
 }
 
+.item.selected {
+    background-color: blue;
+    color: white;
+}
+
 /*.select.active .items {   - скрытие списка через CSS*/
 /*    display: block;*/
 /*}*/
